--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body class="bg-[#f4d04e] text-sm font-figtree">
     <div
-      class="border w-[300px] bg-white m-auto mt-[150px] rounded-2xl p-4 flex flex-col gap-5 shadow-[6px_6px_rgba(0,0,0,5)]"
+      class="border w-[310px] bg-white m-auto mt-[150px] rounded-2xl p-4 flex flex-col gap-5 shadow-[6px_6px_rgba(0,0,0,5)]"
     >
       <div class="">
         <img
@@ -44,13 +44,13 @@
         </h1>
         <p class="text-gray text-xs">
           These languages are the backbone of every website, defining structure,
-          content and, and presentation.
+          content, and presentation.
         </p>
-        <div class="flex items-center gap-2">
+        <div class="flex items-center gap-2 mt-1">
           <img
             src="assets/images/image-avatar.webp"
             alt="Greg Hooper"
-            class="w-[32px] h-[32px]"
+            class="w-[28px] h-[28px]"
           />
           <p class="text-xs font-bold">Greg Hooper</p>
         </div>
