--- a/index.html
+++ b/index.html
@@ -7,21 +7,15 @@
     <style type="text/tailwindcss">
       @theme {
         --color-gray: hsl(0, 0%, 42%);
-        --fontFamily-fitgree: "Fitgree", sans-serif;
+        --fontFamily-figtree: "Figtree", sans-serif;
       }
     </style>
-    <script>
-      module.exports = {
-        theme: {
-          extend: {
-            fontFamily: {
-              roboto: ["Roboto", "sans-serif"],
-              figtree: ["Figtree", "sans-serif"],
-            },
-          },
-        },
-      };
-    </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body class="bg-[#f4d04e] text-sm font-figtree">
     <div
@@ -35,14 +29,14 @@
         />
       </div>
       <div class="flex flex-col gap-4">
-        <div class="bg-[#f4d04e] w-[70px] p-1">
+        <div class="bg-[#f4d04e] w-[70px] p-1 -mb-1">
           <p class="font-bold text-center text-xs">Learning</p>
         </div>
         <p class="font-figtree text-xs">Published 21 Dec 2023</p>
         <h1 class="font-bold text-xl hover:cursor-pointer hover:text-[#f4d04e]">
           HTML & CSS foundations
         </h1>
-        <p class="text-gray text-xs">
+        <p class="text-gray text-xs font-figtree">
           These languages are the backbone of every website, defining structure,
           content, and presentation.
         </p>
