--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <style type="text/tailwindcss">
       @theme {
         --color-gray: hsl(0, 0%, 42%);
+        --color-yellow: hsl(47, 88%, 63%);
         --fontFamily-figtree: "Figtree", sans-serif;
+        --color-gray_950: hsl(0, 0%, 7%);
       }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +19,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-[#f4d04e] text-sm font-figtree">
+  <body class="bg-yellow text-sm font-figtree">
     <div
       class="border w-[310px] bg-white m-auto mt-[150px] rounded-2xl p-4 flex flex-col gap-5 shadow-[6px_6px_rgba(0,0,0,5)]"
     >
@@ -32,7 +34,7 @@
         <div class="bg-[#f4d04e] w-[70px] p-1 -mb-1">
           <p class="font-bold text-center text-xs">Learning</p>
         </div>
-        <p class="font-figtree text-xs">Published 21 Dec 2023</p>
+        <p class="font-figtree text-xs text-gray_950">Published 21 Dec 2023</p>
         <h1 class="font-bold text-xl hover:cursor-pointer hover:text-[#f4d04e]">
           HTML & CSS foundations
         </h1>
@@ -49,6 +51,12 @@
           <p class="text-xs font-bold">Greg Hooper</p>
         </div>
       </div>
+    </div>
+    <div class="attribution text-center mt-15">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#"> Kouame Koffi Yves Placide</a>.
     </div>
   </body>
 </html>
