--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body class="bg-yellow text-sm font-figtree">
     <div
-      class="border w-[310px] bg-white m-auto mt-[150px] rounded-2xl p-4 flex flex-col gap-5 shadow-[6px_6px_rgba(0,0,0,5)]"
+      class="border w-[310px] bg-white m-auto my-[100px] rounded-2xl p-4 flex flex-col gap-5 shadow-[6px_6px_rgba(0,0,0,5)]"
     >
       <div class="">
         <img
@@ -52,7 +52,7 @@
         </div>
       </div>
     </div>
-    <div class="attribution text-center mt-15">
+    <div class="attribution text-center">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
